@@ -22,6 +22,7 @@ Cacti CHANGELOG
 -feature#3131: Button to reindex bad indexes
 -feature#4417: Remote Pollers - Support execution of custom functions at poller bottom
 -feature#4638: Detect the graph with stale rrd or missing rrd
+-feature#4781: Windows install does not support SVG rendering
 -feature#4841: Move the cactid function db_check_reconnect() to lib/database.php for other service oriented scripts
 -feature#4874: Add support for showing business hours
 -feature#4890: Add multi threading for Poller rechace script
